# mime-processing

./: .gitignore  go.mod  go.sum
api/: go.mod
api/temporal-server/: docker-compose.yml
api/temporal-worker/client/: main.go
api/temporal-worker/workflows/: process-embedded.go  process.go
main-processing/: go.mod  go.sum
main-processing/client/: main.go
main-processing/worker/: main.go
main-processing/workflows/: forward-output.go  process-embedded.go  process.go  query-output-stream.go
rusty-processing/: Cargo.toml  Dockerfile  MIMETYPES.md  README.md  docker-compose.yml
rusty-processing/cli/: Cargo.toml
rusty-processing/cli/src/: main.rs
rusty-processing/identify/: Cargo.toml
rusty-processing/identify/src/: deduplication.rs  lib.rs  mimetype.rs
rusty-processing/identify/tests/: identify_regression.rs
rusty-processing/processing/: Cargo.toml
rusty-processing/processing/src/: lib.rs
rusty-processing/processing/src/embedded/: mbox.rs  mod.rs  rfc822.rs  zip.rs
rusty-processing/processing/src/metadata/: mod.rs
rusty-processing/processing/src/pdf/: mod.rs
rusty-processing/processing/src/pdf/rfc822/: html_message_visitor.rs  message_formatter.rs  message_visitor.rs  mod.rs  pdf.rs  transformer.rs
rusty-processing/processing/src/processing/: mod.rs  processor.rs
rusty-processing/processing/src/text/: mod.rs
rusty-processing/processing/tests/: process_regression.rs  regression-test-cases.json
rusty-processing/processing/tests/common/: mod.rs
rusty-processing/resources/mbox/: ubuntu-no-small.mbox  ubuntu-no.mbox
rusty-processing/resources/mbox/ubuntu-no-small.mbox-expected/: metadata.json
rusty-processing/resources/mbox/ubuntu-no-small.mbox-expected/88dde30cbe134ce0dd8aa0979546646a/: mbox-message.eml
rusty-processing/resources/mbox/ubuntu-no-small.mbox-expected/c694e99230b3cbf36d8aef4131596864/: mbox-message.eml
rusty-processing/resources/rfc822/: headers-small.eml
rusty-processing/resources/rfc822/headers-small.eml-expected/: extracted.txt  metadata.json
rusty-processing/resources/zip/testzip.zip-expected/: metadata.json
rusty-processing/services/: Cargo.toml
rusty-processing/services/src/: archive_builder.rs  config.rs  html_to_pdf.rs  lib.rs  pdf_to_image.rs  tika.rs  xdg_mime.rs
rusty-processing/services/tests/: tika_integration.rs
rusty-processing/temporal-worker/: Cargo.toml
rusty-processing/temporal-worker/src/: lib.rs  main.rs
rusty-processing/temporal-worker/src/activities/: create_workspace.rs  download.rs  mod.rs  process_rusty_file.rs  remove_workspace.rs  upload.rs  zip.rs
rusty-processing/temporal-worker/src/io/: mod.rs  multipart_uploader.rs
rusty-processing/temporal-worker/src/util/: mod.rs
rusty-processing/test-utils/: Cargo.toml
rusty-processing/test-utils/src/: lib.rs
temporal-core/: shared.go  temp-workspace.go
temporal-core/activities/: create-working-directory.go  download.go  head-object.go  select-tool.go  upload.go  zip.go
temporal-core/client/: main.go
temporal-core/worker/: main.go
temporal-core/workflow-process-mime/: process-mime.go  rusty_types.go
temporal-core/workflows/: collect.go  forward-output.go  identify.go  process-file.go  process-mime.go  process.go  process_test.go  query-output-stream.go
temporal-server/: .env  docker-compose.yml
