[package]
name = "identify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytesize = "1"
file-format = { version = "0.21", features = ["reader"] }
log = "0.4"
mail-parser = "0.9.0"
md5 = "0.7.0"
services = { version = "0.1", path = "../services" }
tokio = "1.33"
tokio-stream = "0.1"
