[package]
name = "processing"
version = "0.1.0"
edition = "2021"

[features]
default = ["archive", "mail"]
archive = []
mail = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-stream = "0.3"
async-trait = "0.1"
bytesize = "1"
futures = { version = "0.3", features = ["std"] }
html-escape = "0.2"
html2text = "0.6"
identify = { version = "0.1", path = "../identify" }
json = "0.12"
lazy_static = "1.4"
log = "0.4"
mail-parser = "0.9"
mockall = "0.11"
services = { version = "0.1", path = "../services" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1.32", features = ["rt-multi-thread"] }
zip = { version = "0.6" }

[dev-dependencies]
pretty_assertions = "1.4"
rand = "0.8"
serde_json = "1.0"
test-utils = { version = "0.1", path = "../test-utils" }
