[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.5"
bytesize = "1"
futures = { version = "0.3", features = ["std", "executor"] }
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false }
reqwest = { version = "0.11", features = ["stream", "json"] }
tempfile = "3.8"
tokio = { version = "1.32", features = ["macros", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1" }
