[package]
name = "temporal-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async_once = "0.2"
aws-config = { version = "0.56" }
aws-sdk-s3 = { version = "0.33", default-features = false, features = ["rt-tokio"] }
bytesize = "1"
futures = { version = "0.3", features = ["executor"] }
gethostname = "0.4"
lazy_static = "1.4"
log = "0.4"
processing = { version = "0.1",  path = "../processing", features = ["mail"] }
redis = { version = "0.23", features = ["streams", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
services = { version = "0.1", path = "../services" }
simple_logger = "4.2"
tap = "1.0"
tempfile = "3.8"
temporal-sdk = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
threadpool = "1.8"
tokio = { version = "1.32" }
tokio-stream = { version = "0.1", default-features = false }
url = "2.4"
